# KnowPivot

./: .gitignore  CLAUDE.md  README.md  START_ALL.bat
ai-op/: 0.Project-Background.md  1.Requirements-Analysis.md  2.Requirement-Breakdown.md  4.Database-Design.md  5.API.md
ai-op/prompts/: 1.需求分析提示词.md  2.需求拆解提示词.md  3.架构设计提示词.md  4.数据库设计提示词.md  5.接口文档设计提示词.md
docs/superpowers/plans/: 2026-05-14-prompt-optimization.md
knowpivot-agent/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
knowpivot-agent/api/v1/: agent.py
knowpivot-agent/infrastructure/: config.py
knowpivot-agent/schema/: request.py  response.py
knowpivot-embedding/: CLAUDE.md  README.md  main.py  pyproject.toml
knowpivot-embedding/api/v1/: embedding.py
knowpivot-embedding/infrastructure/: config.py
knowpivot-embedding/schema/: request.py  response.py
knowpivot-server/: CLAUDE.md  README.md  pom.xml
knowpivot-server/.claude/agents/: java-backend-agent.md
knowpivot-server/docs/: 接口文档.md  架构设计.md
knowpivot-server/prompts/: Architecture-Design.md
knowpivot-task/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
knowpivot-task/task/core/document/: chunker.py  parser.py
knowpivot-task/task/infrastructure/: config.py  embedding.py  kafka.py  minio.py  redis.py  server_client.py
knowpivot-web/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
knowpivot-web/.claude/agents/: ui-dev.md
knowpivot-web/src/: App.vue  components.d.ts
knowpivot-web/src/api/: auth.ts  chat.ts  knowledge.ts
(+152 files in other folders)
