[project]
name = "knowpivot-agent"
version = "0.1.0"
description = "KnowPivot AI Agent API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.9.1",
    "openai>=2.35.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
